# sapira_ai_exercise

./: .env.example  .env.mlflow.aws  .env.mlflow.local  .env.sample  .gitignore  AWS_MLFLOW.md  AWS_PRODUCTION_SETUP.md  MLFLOW_SETUP.md  README.md  data_consolidation_etl.md  datasets.code-workspace  docker-compose.mlflow.yml  docker-compose.yml  draft.md  fraud_detection.md  fraud_detection_notebook.ipynb  fraud_modelling_plan.md  pyproject.toml  pytest.ini  ranking_model_notebook.ipynb  requirements.txt  setup-mlflow-aws.sh  setup-mlflow-local.sh  test_production_mlflow.py
.cursor/rules/: exercise.mdc  fraud-progress-update.mdc
artifacts/production_model_v2_enhanced/: README.md  gbdt_ulb_enhanced.py  isotonic.pkl
aws-production/: deploy.sh  destroy.sh
aws-production/terraform/: ecs.tf  load_balancer.tf  main.tf  outputs.tf  rds.tf
mlflow-server/: gunicorn_config.py
reports/: automation_opportunities.md  baf_profile.md  dguard_tx_profile.md  feature_evaluation_executive_summary.md  fraud_detection.md  fraud_model_features_explained.md  fraud_model_progress.md  fraud_modelling_plan.md  ieee_identity_profile.md  ieee_transaction_profile.md  if_improvement_plan.md  model_status.md  modeling_feature_candidates.md  paysim_profile.md  report.css  sparkov_customers_profile.md  ulb_test_profile.md  ulb_train_profile.md
reports/enrichment/: ENRICHMENT_PHASE_A_STATUS.md  ENRICHMENT_SIMULATION_METHODOLOGY.md  PHASE_A_SUMMARY.md
reports/phase2/: gbdt_strategy.md
reports/phase2/ulb_gbdt/: gbdt_per_category_thresholds_0p005.json  gbdt_per_category_thresholds_0p01.json  if_pipe.pkl  isotonic.pkl  merchant_freq_map.json  pipeline.pkl  rule_params.json
scripts/: README.md  generate_mlflow_passwords.py  simulate_enrichment.py  test_simulate_enrichment.py  training_pipeline_update_example.py
src/fraud_mvp/: ablation_ulb_if.py  eval_ulb_if.py  feature_candidate_evaluation.py  gbdt_ulb.py  gbdt_ulb_enhanced.py  gbdt_ulb_segmented.py  phase1.py  run_enhanced_with_new_features.py  shadow_score.py  test_enhanced_features.py  train_if_dguard.py
src/sapira_etl/: etl_unified.py  mlflow_client.py  profile_sources.py  schema.py  settings.py  utils.py  writers.py
tests/mlflow/: conftest.py  test_fraud_integration.py  test_mlflow_client.py  test_mlflow_server.py  test_performance.py
(+2 files in other folders)
